Micro tab: Changed "Show in Periodic Table" to have orange background and same font as other buttons
Water tab: Made salt bucket orange instead of blue to make it more visible against the background
Micro tab: Gray out the kit button nodes instead of making them invisible
Micro tab: Made the kit selection buttons orange
# 0.00.107 (56599) Sep 16, 2011
Micro tab: Decouple the bar charts from the true concentration.  Hold the display value constant while draining, and update according to a mix between the delta and the true value
# 0.00.106 (56553) Sep 14, 2011
# 0.00.105 (56545) Sep 14, 2011
Water tab: Made "Show water charges" the first option
Water tab: Labeled the control box as "Show"
Water tab: Removed the word "Show" from all controls in the "Show" control box
Micro tab: Fixed: The + and - signs for the ions (and the 2+ in Ca2+) should be superscripts. This goes for the concentration labels in the 2nd tab, and the ion labels in the 3rd tab. The numbers in the chemical formulas (the 3 in NO3) should be subscripts
Micro tab: Fixed: The formula for glucose should be C6H12O6 instead of C6H12O11
# 0.00.104 (56339) Sep 8, 2011
Micro tab: Moved the "Periodic table" button underneath the solute selection panel
Micro tab: Removed checkbox to toggle whether the color shown is based on charge or atom identity
Micro tab: Removed tick mark readouts from the beaker
Micro tab: Removed "Show values" checkbox from the bar chart
# 0.00.103 (56315) Sep 8, 2011
Micro tab: Made kit selection buttons look more button-like, resolves #3064
# 0.00.102 (56290) Sep 7, 2011
Macro tab: Fixed: Dragging conductivity tester node moves it in front of the shakers and vice-versa
Macro tab: Fixed: The conductivity tester can go behind the evaporation control box
# 0.00.101 (56282) Sep 7, 2011
Macro tab: Show the solute control panel node behind the shaker node so the conductivity tester will also go in front
Macro tab: Fixed: Conductivity meter appears behind its control box