@@ -1,6 +1,7 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.water.view;
 
+import java.awt.Color;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 
@@ -29,6 +30,8 @@ import static edu.colorado.phet.sugarandsaltsolutions.common.view.SugarAndSaltSo
  */
 public class WaterControlPanel extends ControlPanelNode {
 
+    private static final PhetFont buttonFont = new PhetFont( 16 );
+
     public WaterControlPanel( final WaterModel waterModel, final GlobalState state, final WaterCanvas waterCanvas, final Sucrose3DDialog sucrose3DDialog ) {
         super( new VBox(
 
@@ -37,13 +40,13 @@ public class WaterControlPanel extends ControlPanelNode {
 
                 //Checkbox to show/hide water charges (showing partial charges)
                 new PSwing( new PropertyCheckBox( WATER_CHARGES, waterModel.showWaterCharges ) {{
-                    setFont( new PhetFont( 16 ) );
+                    setFont( buttonFont );
                 }} ),
 
                 //Allow the user to show individual atoms within the sugar molecule, but only if a sugar molecule is in the scene
                 //Works for both the sugar in the bucket and any in the model
                 new PSwing( new PropertyCheckBox( SUGAR_ATOMS, waterModel.showSugarAtoms ) {{
-                    setFont( new PhetFont( 16 ) );
+                    setFont( buttonFont );
                 }} ),
 
                 //If development version, show button to launch developer controls
@@ -62,7 +65,7 @@ public class WaterControlPanel extends ControlPanelNode {
                 }} : new PNode(),
 
                 //Add a button that allows the user to show the 3D water molecule
-                new TextButtonNode( SUGAR_IN_3_D ) {{
+                new TextButtonNode( SUGAR_IN_3_D, buttonFont, Color.yellow ) {{
                     addActionListener( new ActionListener() {
                         public void actionPerformed( ActionEvent e ) {
                             sucrose3DDialog.showDialog();
